로그인 회원가입

--- a/src/main/resources/static/css/login/join.css
+++ b/src/main/resources/static/css/login/join.css
@@ -850,3 +850,9 @@ textarea:-ms-input-placeholder {
     font-family: OhouseIcon;
     vertical-align: top;
 }
+
+
+.border-red{
+    border: 1px solid red !important;
+
+}
