--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -344,3 +344,10 @@ a * {
 .css-b3oum6 {
     height: 100%;
 }
+
+.css-1voj95g {
+    padding-top: 10px;
+    font-size: 14px;
+    line-height: 18px;
+    color: rgb(255, 119, 119);
+}
