--- a/src/main/resources/static/css/login/new_password.css
+++ b/src/main/resources/static/css/login/new_password.css
@@ -185,3 +185,42 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
     outline: none;
     box-shadow: 0 0 0 3px rgba(255,119,119,.3);
 }
+
+.email-btn:hover{
+    border-color: #3b7661;
+    background-color: #3b7661;
+}
+
+.new-password-btn:hover{
+    border-color: #3b7661;
+    background-color: #3b7661;
+}
+
+.email-btn{
+    border-color: #7aab9a;
+    background-color: #7aab9a;
+
+}
+
+.css-dkv9cf {
+    color: rgb(255, 119, 119);
+    font-size: 12px;
+    padding: 6px 0px;
+}
+
+.btn-disabled{
+    background: rgb(247, 248, 250) !important;
+    color: rgb(194, 200, 204) !important;
+    border-color: rgb(218, 220, 224) !important;
+}
+
+.email-code-btn:hover{
+    border-color: #3b7661 ;
+    background-color: #3b7661 ;
+}
+
+.btn-disabled:hover{
+    background: rgb(247, 248, 250) !important;
+    color: rgb(194, 200, 204) !important;
+    border-color: rgb(218, 220, 224) !important;
+}
