--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>회원가입</title>
@@ -12,7 +12,7 @@
       rel="stylesheet">
 <body>
 <div class="css-b3oum6">
-    <section class="css-tbdbun e1y3odo25"><a href="/">
+    <section class="css-tbdbun e1y3odo25"><a href="/main/main">
         <svg width="88" height="31" viewBox="0 0 88 31" preserveAspectRatio="xMidYMid meet">
             <g fill="none" fill-rule="evenodd">
                 <path fill="#7aab9a"
@@ -32,7 +32,7 @@
                 <div class="css-1mld7di e111gxds3">SNS계정으로 간편하게 회원가입</div>
                 <ul class="css-zl1inp e111gxds2">
 
-                    <li class="css-lbtgsv e111gxds1"><a href="/users/auth/kakao" title="카카오톡으로 가입하기"
+                    <li class="css-lbtgsv e111gxds1"><a href="/user/Oauth-kakao" title="카카오톡으로 가입하기"
                                                         class="css-4zleql e111gxds0">
                         <svg width="48" height="48" viewBox="0 0 48 48" preserveAspectRatio="xMidYMid meet">
                             <g fill="none" fill-rule="evenodd">
@@ -43,7 +43,7 @@
                             </g>
                         </svg>
                     </a></li>
-                    <li class="css-lbtgsv e111gxds1"><a href="/users/auth/naver" title="네이버로 가입하기"
+                    <li class="css-lbtgsv e111gxds1"><a href="/user/Oauth-naver" title="네이버로 가입하기"
                                                         class="css-4zleql e111gxds0">
                         <svg width="48" height="48" viewBox="0 0 48 48" preserveAspectRatio="xMidYMid meet">
                             <g fill="none" fill-rule="evenodd">
@@ -144,8 +144,8 @@
                     <div class="css-18zgq8s euhjq6q1">다른 유저와 겹치지 않도록 입력해주세요. (2~15자)</div>
                     <label><input class="_3ASDR _1qwAY highlight" field="[object Object]" name="nickname"
                                   placeholder="별명 (2~15자)" value="">
-                        <div class="css-1voj95g euhjq6q0 nickname-valid"
-                             style="display: none;">닉네임은 한글,영어,숫자 조합으로 <br>2~15자 사이만 가능합니다.
+                        <div class="css-1voj95g euhjq6q0 nickname-valid" style="display: none;">닉네임은 한글,영어,숫자 조합으로
+                            <br>2~15자 사이만 가능합니다.
                         </div>
                     </label></div>
                 <div class="css-1kfo0kb euhjq6q3"><label class="css-nv82x6 euhjq6q2 checkbox-title">약관동의</label>
@@ -173,7 +173,7 @@
                                        value="false"></div>
                             <span class="css-lc8zlb"><span required=""
                                                            class="css-16dg5k0 e1hy3kq3">이용약관</span></span></label><a
-                                target="_blank" class="css-1afr2ti e1hy3kq1" href="/usepolicy"><span
+                                target="_blank" class="css-1afr2ti e1hy3kq1" ><span
                                 class="_chevron_right_18 css-qu4qo8"></span></a></div>
                         <div class="css-127yl2f e1hy3kq5"><label class="e1hy3kq4 css-xbe84c">
                             <div class="css-1ht51ro check-box">
@@ -181,17 +181,17 @@
                                 <input field="[object Object]" name="agree3" type="checkbox" class="css-8um586"
                                        value="false"></div>
                             <span class="css-lc8zlb"><span required="" class="css-16dg5k0 e1hy3kq3">개인정보수집 및 이용동의</span></span></label><a
-                                target="_blank" class="css-1afr2ti e1hy3kq1" href="/privacy?type=register"><span
+                                target="_blank" class="css-1afr2ti e1hy3kq1" ><span
                                 class="_chevron_right_18 css-qu4qo8"></span></a></div>
                         <div class="css-127yl2f e1hy3kq5"><label class="e1hy3kq4 css-xbe84c">
-                            <div class="css-1ht51ro check-box" >
+                            <div class="css-1ht51ro check-box">
                                 <div class="css-edbsi7"><span class="_check_12 css-1jxc35f"></span></div>
                                 <input field="[object Object]" name="agreeMarketUsage" type="checkbox"
                                        class="css-8um586" value="false"></div>
                             <span class="css-lc8zlb"><span
                                     class="css-1qfqwct e1hy3kq3">개인정보 마케팅 활용 동의</span></span></label><a target="_blank"
                                                                                                         class="css-1afr2ti e1hy3kq1"
-                                                                                                        href="/privacy?type=register_marketing"><span
+                                                                                                        ><span
                                 class="_chevron_right_18 css-qu4qo8"></span></a></div>
                         <div class="css-127yl2f e1hy3kq5"><label class="e1hy3kq4 css-xbe84c">
                             <div class="css-1ht51ro check-box">
@@ -205,32 +205,36 @@
                     <div class="css-1voj95g euhjq6q0 checkbox-valid" style="display: none;">필수 동의란은 모두 체크해주세요!
                     </div>
                 </div>
-                <div class="g-recaptcha css-1yqaufb e9ksxky1" data-sitekey="6LcZ2tckAAAAAJFHN0VkV2kTYio8Uh3YViGT3ern"
-                     data-callback="handleRecaptchaCallback" data-expired-callback="handleRecaptchaExpiredCallback">
-                    <div style="width: 304px; height: 78px;">
-                        <div>
-                            <iframe title="reCAPTCHA"
-                                    src="https://www.google.com/recaptcha/enterprise/anchor?ar=1&amp;k=6LcZ2tckAAAAAJFHN0VkV2kTYio8Uh3YViGT3ern&amp;co=aHR0cHM6Ly9vaG91LnNlOjQ0Mw..&amp;hl=ko&amp;v=wqcyhEwminqmAoT8QO_BkXCr&amp;size=normal&amp;cb=700ubuv30iwx"
-                                    width="304" height="78" role="presentation" name="a-g1ai2pua2oe9" frameborder="0"
-                                    scrolling="no"
-                                    sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe>
-                        </div>
-                        <textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response"
-                                  style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea>
-                    </div>
-                    <iframe style="display: none;"></iframe>
+                <div id="g-recaptcha"></div>
+                <div class="css-1voj95g euhjq6q0 recaptcha-valid" style="display: none;">로봇이 아님을 인증해주세요!
                 </div>
-                <div class="css-1kfo0kb euhjq6q3">
-                    <input field="[object Object]" name="recaptchaToken" value=""
-                           class="form-control css-eivff4 e9ksxky0">
-                </div>
+                <div class="css-1kfo0kb euhjq6q3"><input field="[object Object]" name="recaptchaToken"
+                                                         class="form-control css-eivff4 e9ksxky0" value=""></div>
+
                 <button class="_3Z6oR _3AsCW _2tsrJ css-1d3w5wq e1y3odo22 join-btn" type="button">회원가입하기</button>
             </form>
-            <p class="css-frl1s e1y3odo21">이미 아이디가 있으신가요?<a href="/users/sign_in" class="css-i9fa3q e1y3odo20">로그인</a>
+            <p class="css-frl1s e1y3odo21">이미 아이디가 있으신가요?<a href="/user/login" class="css-i9fa3q e1y3odo20">로그인</a>
             </p></div>
     </section>
 </div>
+<form class="submit-form" th:action="@{/user/join}" method="post" th:object="${userVO}">
+    <input type="hidden" th:field="*{userIdentification}">
+    <input type="hidden" th:field="*{userPassword}">
+    <input type="hidden" th:field="*{userNickname}">
+    <input type="hidden" th:field="*{userName}">
+    <input type="hidden" th:field="*{userMarketing}">
+    <input type="hidden" th:field="*{userAlarm}">
+    <input type="hidden" th:field="*{userStatus}">
+</form>
+
+
+
+
+
+
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
 <script src="/js/login/join.js"></script>
+
 </html>
