--- a/src/main/resources/templates/mypage/users-edit.html
+++ b/src/main/resources/templates/mypage/users-edit.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleag.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -13,10 +13,14 @@
     <link href="/css/font.css" rel="stylesheet">
     <link href="/css/mypage/users.css" rel="stylesheet">
     <link href="/css/mypage/users-edit.css" rel="stylesheet">
+    <link href="/css/header-footer/header.css" rel="stylesheet">
+    <link href="/css/header-footer/footer.css" rel="stylesheet">
 </head>
 </head>
 <body>
 <div>
+    <header th:replace="~{/header-footer/header :: #header}"></header>
+
     <div class="css-18dsw15 e1ivswjr4">
         <div class="myhome-nav myhome-nav--owner">
             <nav class="page-navigation myhome-nav__owner">
@@ -51,7 +55,7 @@
                             <div class="expert-form-group__input">
                                 <div class="edit-user-info__form-item__field">
                                     <div class="input-group email-input"><span class="email-input__local"><label><input
-                                            class="form-control" placeholder="이메일" size="1" value><span
+                                            class="form-control" placeholder="이메일" size="1" name="email" value><span
                                             class="form-control-blind">이메일 앞 주소 입력하기</span></label></span><span
                                             class="email-input__separator">@</span><span
                                             class="email-input__domain"><label><select class="form-control"><option
@@ -80,7 +84,7 @@
                         <div class="expert-form-group__content">
                             <div class="expert-form-group__input">
                                 <div class="edit-user-info__form-item__field">
-                                    <div class="edit-user-info__input"><input class="form-control" value>
+                                    <div class="edit-user-info__input"><input class="form-control" name="nickname" value>
                                         <div class="edit-user-info__input__error"></div>
                                     </div>
                                 </div>
@@ -93,19 +97,19 @@
                     <div class="expert-form-group edit-user-info__form-item__group">
                         <div class="expert-form-group__content">
                             <div class="expert-form-group__input">
-                                <div class="edit-user-info__form-item__field"><input placeholder="https://ohou.se"
+                                <div class="edit-user-info__form-item__field"><input name="marketing" placeholder="https://ohou.se"
                                                                                      class="form-control" value="">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="edit-user-info__form-item">
+                <!--<div class="edit-user-info__form-item">
                     <div class="edit-user-info__form-item__title">성별</div>
                     <div class="expert-form-group edit-user-info__form-item__group">
                         <div class="expert-form-group__content">
                             <div class="expert-form-group__input">
-                                <div class="edit-user-info__form-item__field edit-user-info__form-item__field--sex">
+                                <div class="edit-user-info__form-item__field edit-user-info__form-item__field&#45;&#45;sex">
                                     <ul class="radio-group-input">
                                         <li>
                                             <div class="form-radio"><label class="form-radio-label"><input
@@ -136,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="edit-user-info__form-item">
                     <div class="edit-user-info__form-item__title">프로필 이미지</div>
                     <div class="expert-form-group edit-user-info__form-item__group">
