--- a/src/main/resources/templates/review/local_review_detail.html
+++ b/src/main/resources/templates/review/local_review_detail.html
@@ -46,7 +46,7 @@
                     <div class="e18r2nwe4 css-12un3nt">
                         <div class="css-bh7d0o e18r2nwe2">
                             <div class="css-hhf500 e18r2nwe0">
-                                <button class="mainBtn css-hhk5mj">로컬 크리에이터 후기</button>
+                                <button class="mainBtn css-hhk5mj orderActive">로컬 크리에이터 후기</button>
                             </div>
                             <div class="css-hhf500 e18r2nwe0">
                                 <button class="mainBtn css-hhk5mj">플로깅 참가자 후기 목록</button>
@@ -246,123 +246,6 @@
                                         <path fill="#35C5F0" fill-rule="nonzero" d="M12.472 17.07a.999.999 0 0 0-.944 0l-7.056 3.811A.999.999 0 0 1 3 19.998V4.502C3 3.672 3.672 3 4.5 3h15c.828 0 1.5.673 1.5 1.502v15.496a1 1 0 0 1-1.472.883l-7.056-3.811z"></path>
                                     </svg>
                                 </button>
-                                <!--<div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 50.444%; left: 30.9059%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi _2ZQKI jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 17.0515%; left: 20.6039%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 21.6696%; left: 33.5702%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 47.0693%; left: 11.9005%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 51.6874%; left: 43.5169%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 31.6163%; left: 42.2735%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi _2ZQKI jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 59.325%; left: 55.4174%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi _2ZQKI jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 26.1101%; left: 78.3304%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 52.2202%; left: 76.5542%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 94.4938%; left: 92.0071%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 52.0426%; left: 66.0746%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi _2ZQKI jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 71.5808%; left: 92.1847%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="_2SUYq _1wnxa project-detail-image-block__tag" style="top: 47.2469%; left: 51.5098%;">
-                                    <button class="_20tat" type="button">
-                                        <span class="_1nBmM"></span>
-                                        <svg width="1em" height="1em" viewBox="0 0 24 24" class="Vfsdi _2ZQKI jCTZa project-detail-image-block__tag-icon">
-                                            <circle cx="12" cy="12" r="12" fill="currentColor"></circle>
-                                            <path stroke="#FFF" stroke-linecap="square" stroke-width="2" d="M12 16V8m-4 4h8"></path>
-                                        </svg>
-                                    </button>
-                                </div>-->
                             </div>
                         </div>
                         <p class="bpd-view-text bpd-view-p-block">
@@ -657,6 +540,7 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script>
+
     $mainbutton = $("button.mainBtn");
     $mainbutton.on("click", function () {
         $mainbutton.removeClass("orderActive");
