--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -80,7 +80,7 @@
 <div class="e4cq32f2 css-1obbfpy">
     <div class="css-14vj981">
         <div class="css-dlv2hg">
-            <a th:href="@{product/product-list}">
+            <a th:href="@{/product/product-list}">
                 <div class="css-147wp72">
                     <strong class="css-1d0kvw3">상품 목록~🍎
                     </strong>
@@ -88,13 +88,13 @@
             </a>
         </div>
         <div class="css-7z0c8w">
-            <a th:href="@{product/product-list}">
+            <a th:href="@{/product/product-list}">
                 <button type="button" class="css-av2k9l">더보기</button>
             </a>
         </div>
     </div>
     <div class="css-gkfaqp e4cq32f1">
-        <div class="css-70b3yb e7clyrt0">
+        <div class="css-70b3yb e7clyrt0 product-list">
             <!-- 목록 1개  -->
             <div class="css-fyyvpx e1fm144d2">
                 <div class="e1fm144d7 css-wpil38 e193wc2k3">
@@ -130,20 +130,20 @@
 <div class="e4cq32f2 css-1obbfpy">
     <div class="css-14vj981">
         <div class="css-dlv2hg">
-            <a th:href="@{plogging/plogging}">
+            <a th:href="@{/plogging/plogging}">
                 <div class="css-147wp72">
                     <strong class="css-1d0kvw3">플로깅 모여라~ 🏡</strong>
                 </div>
             </a>
         </div>
         <div class="css-7z0c8w">
-            <a th:href="@{plogging/plogging}">
+            <a th:href="@{/plogging/plogging}">
                 <button type="button" class="css-av2k9l">더보기</button>
             </a>
         </div>
     </div>
     <div class="css-gkfaqp e4cq32f1">
-        <div class="css-70b3yb e7clyrt0">
+        <div class="css-70b3yb e7clyrt0 plogging-list">
             <!-- 목록 1개  -->
             <div class="css-fyyvpx e1fm144d2">
                 <div class="e1fm144d7 css-wpil38 e193wc2k3">
@@ -184,20 +184,20 @@
 <div class="e4cq32f2 css-1obbfpy">
     <div class="css-14vj981">
         <div class="css-dlv2hg">
-            <a th:href="@{review/user_review_list}">
+            <a th:href="@{/review/user_review_list}">
                 <div class="css-147wp72">
                     <strong class="css-1d0kvw3">플로깅 다녀온 후기</strong>
                 </div>
             </a>
         </div>
         <div class="css-7z0c8w">
-            <a th:href="@{review/user_review_list}">
+            <a th:href="@{/review/user_review_list}">
                 <button type="button" class="css-av2k9l">더보기</button>
             </a>
         </div>
     </div>
     <div class="css-gkfaqp e4cq32f1">
-        <div class="css-dx7vvx e7clyrt0">
+        <div class="css-dx7vvx e7clyrt0 review-list">
             <div class="item">
                 <a href="/interior3ds/642b8b6f176b1d16aebc302a">
                     <article class="css-1evwse1 e1e2zisd6">
@@ -262,6 +262,10 @@
     });
 
 </script>
-
+<script th:inline="javascript">
+    let reviews =[[${reviews}]];
+    let products = [[${products}]];
+    let ploggings = [[${ploggins}]];
+</script>
 
 </html>
